cmake_minimum_required(VERSION 3.16.0)

message(">> core/tests CMakeLists.txt")

# Project named 'core-tests' on C++
project(core-tests LANGUAGES CXX)

# Specify the C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Set output directories to match root CMakeLists.txt
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

# Root directory
get_filename_component(ROOT_DIR ../../ ABSOLUTE BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

# Include CMake helper functions file
include(${ROOT_DIR}/cmake/func.cmake)

# Set paths
set(CORE_DIR ${ROOT_DIR}/core/src)
set(TESTS_DIR ${ROOT_DIR}/core/tests)
set(GOOGLETEST_DIR ${ROOT_DIR}/lib/googletest)
message("CORE_DIR:${CORE_DIR}")
message("TESTS_DIR:${TESTS_DIR}")
message("GOOGLETEST_DIR:${GOOGLETEST_DIR}")

# Set include files search paths
include_directories(
        ${TESTS_DIR}
        ${CORE_DIR}
        ${GOOGLETEST_DIR}/googletest                                  # To serve src/gtest-internal-inl.h include
        ${GOOGLETEST_DIR}/googletest/include
)

# MinGW CMake doesn't build gtest - make it explicitly
if (WIN32 AND NOT MSVC)
    set (GOOGLETEST_FILES
            ${GOOGLETEST_DIR}/googletest/src/gtest.cc
            ${GOOGLETEST_DIR}/googletest/src/gtest-death-test.cc
            ${GOOGLETEST_DIR}/googletest/src/gtest-filepath.cc
            ${GOOGLETEST_DIR}/googletest/src/gtest-matchers.cc
            ${GOOGLETEST_DIR}/googletest/src/gtest-port.cc
            ${GOOGLETEST_DIR}/googletest/src/gtest-printers.cc
            ${GOOGLETEST_DIR}/googletest/src/gtest-test-part.cc
            ${GOOGLETEST_DIR}/googletest/src/gtest-typed-test.cc
            ${GOOGLETEST_DIR}/googletest/src/gtest-internal-inl.h
    )
else (WIN32 AND NOT MSVC)
    # Compile GoogleTest to <binary>/googletest subfolder
    add_subdirectory(${GOOGLETEST_DIR} ${CMAKE_CURRENT_BINARY_DIR}/googletest)
endif (WIN32 AND NOT MSVC)

# Check if we're being included from the top CMakeLists.txt
if (CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    # We're being built directly, so build core first
    add_subdirectory(${CORE_DIR} core)
else()
    # I am called from other project with add_subdirectory()
    # So skip /src/core dependency build
endif()

# Compile all *.cpp files both from core/src and core/tests folders
file (GLOB_RECURSE TEST_CPP_FILES ${TESTS_DIR}/*.cpp)
EXCLUDE_FILES_FROM_DIR_IN_LIST("${TEST_CPP_FILES}" "/build/" FALSE OUTVAR TEST_CPP_FILES)      # Exclude /tests/build folder
EXCLUDE_FILES_FROM_DIR_IN_LIST("${TEST_CPP_FILES}" "/CMakeFiles/" FALSE OUTVAR TEST_CPP_FILES) # Exclude /CMakeFile autogenerated files

set (SOURCES "${CORE_CPP_FILES};${TEST_CPP_FILES};${GOOGLETEST_FILES}")
message("TESTS:${TEST_CPP_FILES}")
message("SOURCES:${SOURCES}")

# Compile tests into executable
add_executable(${PROJECT_NAME} ${SOURCES})

# Declare _ALWAYS_USE_LOGGING for compiler
target_compile_definitions(${PROJECT_NAME} PRIVATE _ALWAYS_USE_LOGGING)

# Declare _DEBUG symbol for compiler
if (CMAKE_BUILD_TYPE MATCHES Debug)
    message(STATUS "CMAKE_BUILD_TYPE:${CMAKE_BUILD_TYPE} - defining '_DEBUG'")
    target_compile_definitions(${PROJECT_NAME} PRIVATE _DEBUG)
endif (CMAKE_BUILD_TYPE MATCHES Debug)

# Enable test wrappers in code
target_compile_definitions(${PROJECT_NAME} PRIVATE _CODE_UNDER_TEST)

# 'pch.h' is our precompiled header
#target_precompile_headers(${PROJECT_NAME} PRIVATE ${TESTS_DIR}/pch.h)

target_link_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/googletest)

# All standard libraries required
if (WIN32 AND MSVC)
    set(common_libraries stdc++ iconv gtest)
endif (WIN32 AND MSVC)

if (WIN32 AND MINGW)
    # Link all as static
    set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-static-libgcc -static-libstdc++ -Wl,-Bstatic,--whole-archive -lwinpthread -liconv -Wl,--no-whole-archive")

    set(common_libraries shlwapi ws2_32)
endif (WIN32 AND MINGW)

if (UNIX AND NOT APPLE)
    set(CMAKE_CXX_FLAGS " -static-libstdc++")
    set(common_libraries -static-libstdc++ pthread gtest)
endif (UNIX AND NOT APPLE)

if (APPLE)
    target_link_directories(${PROJECT_NAME} PRIVATE /usr/lib)
    set(common_libraries pthread iconv gtest)
endif (APPLE)

target_link_libraries(${PROJECT_NAME}
    ${common_libraries}
    core
)

# Define data paths
set(DATA_PATH "${ROOT_DIR}/data")
set(CONFIG_FILE "${DATA_PATH}/configs/pentagon512k/unreal.ini")

# Copy resources using modern CMake syntax
add_custom_command(
    TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy
        "${CONFIG_FILE}" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unreal.ini"
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${DATA_PATH}/rom" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/rom"
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${DATA_PATH}/testrom" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/rom"
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${ROOT_DIR}/testdata" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/testdata"
    COMMENT "Copying runtime resource files to output directory"
)
